# mini-sync

./: .gitignore  AGENTS.md  Cargo.toml  README.md
android/: README.md
desktop/: config.example.toml
desktop/mini-sync/: Cargo.toml
desktop/mini-sync-common/: Cargo.toml
desktop/mini-sync-common/src/: clipboard.rs  config.rs  discovery.rs  identity.rs  lib.rs  pairing.rs  paths.rs
desktop/mini-sync/src/: main.rs
desktop/mini-syncd/: Cargo.toml
desktop/mini-syncd/src/: main.rs
proto/: README.md  messages.schema.json
