[package]
name = "mini-sync-common"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22.1"
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
rand = "0.8.5"
serde = { version = "1.0.203", features = ["derive"] }
toml = "0.8.12"
uuid = { version = "1.9.1", features = ["v4"] }
x25519-dalek = { version = "2.0.0", features = ["static_secrets"] }
