[package]
name = "mini-sync"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
mini-sync-common = { path = "../mini-sync-common" }
qrcode = "0.14.1"
rand = "0.8.5"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
uuid = { version = "1.9.1", features = ["v4"] }
base64 = "0.22.1"
snow = "0.9.6"
hex = "0.4.3"
sha2 = "0.10.8"
walkdir = "2.5.0"
zip = "0.6.6"
